--- a/index.html
+++ b/index.html
@@ -10,21 +10,19 @@
   </head>
   <body>
     <div id="main">
-    
       <div id="TOC">
         <h2>Topics</h2>
         <ul id="tocul">
-       
           <li><a href="DBMS.html">DBMS</a></li>
-         <!-- <li><a href="BOOLEAN.html">Number System and Boolean Logic</a></li>
+          <!-- <li><a href="BOOLEAN.html">Number System and Boolean Logic</a></li>
           <li><a href="os.html">Computer Software and Operating System</a></li>
           <li>
             <a href="application.html"
               >Application Packages (Word, Excel, PowerPoint)</a
             >
-          </li>
-          <li><a href="c.html">Programming Concepts and Logic</a></li>
-          <li><a href="actualC.html">Programming in C</a></li>
+          </li> -->
+          <li><a href="c.html">Programming in C</a></li>
+          <!-- <li><a href="actualC.html">Programming in C</a></li>
           <li><a href="web.html">Web Technologies (HTML + CSS)</a></li>
           <li><a href="multi.html">Multimedia</a></li>
           <li><a href="cyber.html">Information Security and Cyber Law</a></li> -->
@@ -34,19 +32,62 @@
       <!-- Course Details -->
 
       <div id="details">
-
         <h1>NEB Computer Science - Grade 11</h1>
-			  	  <table>
-	<tr> <th>S.N</th><th>Topic</th><th>CWM</th><th>Working Hours</th> </tr>
-	<tr> <td>1</td>  <td>DBMS</td>  <td>8</td>  <td>12</td> </tr>
-	<tr> <td>2</td>  <td>Data communication and networking</td>  <td>9</td>  <td>15</td> </tr>
-	<tr> <td>3</td>   <td>Web Tech-II</td>  <td>8</td><td>12</td>  </tr>
-	<tr> <td>4</td>  <td>C Programming II</td>  <td>8</td> <TD>12</TD> </tr>
-	<tr> <td>5</td>  <td>Object Oriented Programming</td>  <td>6</td> <td>10</td>  </tr>
-	<tr> <td>6</td>    <td>Software development life cycle</td>  <td>6</td>  <td>10</td> </tr>
-	<tr> <td>7</td>   <td>Recent Trends in technology</td>  <td>5</td><td>9</td>  </tr>
-	<tr> <th colspan="2">Total</th>  <th>50</th>  <th>80</th>   </tr>
-	  </table>
+        <table>
+          <tr>
+            <th>S.N</th>
+            <th>Topic</th>
+            <th>CWM</th>
+            <th>Working Hours</th>
+          </tr>
+          <tr>
+            <td>1</td>
+            <td>DBMS</td>
+            <td>8</td>
+            <td>12</td>
+          </tr>
+          <tr>
+            <td>2</td>
+            <td>Data communication and networking</td>
+            <td>9</td>
+            <td>15</td>
+          </tr>
+          <tr>
+            <td>3</td>
+            <td>Web Tech-II</td>
+            <td>8</td>
+            <td>12</td>
+          </tr>
+          <tr>
+            <td>4</td>
+            <td>C Programming II</td>
+            <td>8</td>
+            <td>12</td>
+          </tr>
+          <tr>
+            <td>5</td>
+            <td>Object Oriented Programming</td>
+            <td>6</td>
+            <td>10</td>
+          </tr>
+          <tr>
+            <td>6</td>
+            <td>Software development life cycle</td>
+            <td>6</td>
+            <td>10</td>
+          </tr>
+          <tr>
+            <td>7</td>
+            <td>Recent Trends in technology</td>
+            <td>5</td>
+            <td>9</td>
+          </tr>
+          <tr>
+            <th colspan="2">Total</th>
+            <th>50</th>
+            <th>80</th>
+          </tr>
+        </table>
         <p>
           Welcome to the NEB Computer Science Grade 12 course! This program is
           designed to provide students with a robust understanding of the world
