--- a/DBMS.html
+++ b/DBMS.html
@@ -1590,7 +1590,7 @@
     </table>
 </div>
 <div id="qn" class="question">
-  Write SQL queries for the following tasks:
+ <h2> Write SQL queries for the following tasks:</h2>
   <div class="answer">
     <h3>Create a table named students with the fields: Id, Name, Class, and Marks.</h3>
     <p>
